2004-06-19
	* support multiple paths to memcache nodes (Brad)
	  see 'set_pref_ip'

2004-05-30
	* release version 1.13

2004-05-26 (Whitaker <whitaker@danga.com>)
	* quiet warning

2004-05-25 (Whitaker <whitaker@danga.com>)
	* get_multi shouldn't modify caller's @_

2004-05-18 (Michael <ged@danga.com>)
	* namespace support
	* use fields

2004-05-16 (Alexei Kozlov <kozlov@w-m.ru>)
	* remove warnings with vec

2004-04-09 (brad)
	* in perl 5.6, trap errors dethawing 5.8 storable objects
	  and instead treat it like a cache miss

2004-04-01
	* use $! and not %! for perl 5.6 compat (Dave Evans <..@djce.org.uk>)
	* don't mark whole IP dead anymore when a node is down (Jason Titus <jtitus@postini.com>)
	* start version numbering (Jamie McCarthy <jamie@mccarthy.vg>)

2004-03-09 (Brad/Avva)
	* _oneline can return more than one line (but always on a line break),
	  so caller must decide when it's really time to quit.  had to modify
	  run_command to know that.  (which is used by stats)

2004-03-05 (Dave Evans <danga-20040305@djce.org.uk>)
	* Here's a really trivial patch for the Perl binding,
	Cache::Memcached.  The bug is that the module assumes that the
	currently select()ed filehandle is STDOUT, but this might not be
	the case.  So this patch ensures that the select()ed filehandle is
	preserved, not forced to STDOUT.

2004-02-29 (Brad)
	* add readonly option

2004-02-27 (Avva)
	* Cleaner handling of the case when _oneline is called without a
	  line parameter (i.e. not to send anything, just read a line from
	  the socket).  Make it depend on $line being defined only,
	  regardless of its content (thanks Brad!).

2004-02-25 (Avva)
	* Asyncify all I/O, finally get rid of alarm() yuckiness, unify all
	  one-liner command/responses into a single internal API.
	
2004-02-17
	* document in POD the delete method
	
2004-02-03
	* fix bug with 2k read boundaries falling in the middle
	  of "VALUE ..." or "END" lines, thus halting future
	  parsing and responses.  (eek!)