@@ -5,3 +5,4 @@ README
 MANIFEST
 TODO
 t/use.t
+META.yml                                 Module meta-data (added by MakeMaker)
